# gelocus

./: .gitignore  .justfile  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  gelocus.hpp  gen_transformations.py  main.cpp  old-gelocus.hpp
include/gelocus/: gelocus.h  gelocus.hpp  iau76.h
include/lib_gelocus/: gelocus.hpp
src/: common_private.h  gelocus.c  iau76.c  iau_76.c
tests/: CMakeLists.txt  test_gelocus.cpp  test_iau76.cpp
